Implement ITargetFrame to fix targetted navigation via Win32 Hlink APIs. b=183508 r=dbradley@netscape.com sr=alecf@netscape.com a=asa@mozilla.org